@startuml

title __TONR2's Class Diagram__\n

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.SecurityConfig {
    }
  }
  

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.ServletInitializer {
    }
  }
  

  namespace org.springframework.security.oauth.examples.config {
    class org.springframework.security.oauth.examples.config.WebMvcConfig {
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    class org.springframework.security.oauth.examples.tonr.SparklrException {
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    interface org.springframework.security.oauth.examples.tonr.SparklrService {
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    namespace converter {
      class org.springframework.security.oauth.examples.tonr.converter.AccessTokenRequestConverter {
      }
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    namespace handler {
      class org.springframework.security.oauth.examples.tonr.handler.OAuth2ExceptionHandler {
      }
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    namespace impl {
      class org.springframework.security.oauth.examples.tonr.impl.SparklrServiceImpl {
      }
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    namespace mvc {
      class org.springframework.security.oauth.examples.tonr.mvc.FacebookController {
      }
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    namespace mvc {
      class org.springframework.security.oauth.examples.tonr.mvc.SparklrController {
      }
    }
  }
  

  namespace org.springframework.security.oauth.examples.tonr {
    namespace mvc {
      class org.springframework.security.oauth.examples.tonr.mvc.SparklrRedirectController {
      }
    }
  }
  

  org.springframework.security.oauth.examples.config.SecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  org.springframework.security.oauth.examples.config.ServletInitializer -up-|> org.springframework.web.servlet.support.AbstractDispatcherServletInitializer
  org.springframework.security.oauth.examples.config.WebMvcConfig -up-|> org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter
  org.springframework.security.oauth.examples.tonr.converter.AccessTokenRequestConverter .up.|> org.springframework.core.convert.converter.GenericConverter
  org.springframework.security.oauth.examples.tonr.impl.SparklrServiceImpl .up.|> org.springframework.security.oauth.examples.tonr.SparklrService
  org.springframework.security.oauth.examples.tonr.mvc.SparklrController o-- org.springframework.security.oauth.examples.tonr.SparklrService : sparklrService
  org.springframework.security.oauth.examples.tonr.mvc.SparklrRedirectController o-- org.springframework.security.oauth.examples.tonr.SparklrService : sparklrService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
